# zero-auth

./: .gitignore  Cargo.toml  README.md
.cursor/: refactor-patterns.md
.cursor/commands/: dev.md
client/src/: storage.rs
client/src/commands/: auth.rs
crates/zero-auth-client/: README.md  REFERENCE.md
crates/zero-auth-client/src/: main.rs
crates/zero-auth-crypto/: Cargo.toml
crates/zero-auth-crypto/src/: constants.rs  derivation.rs  keys.rs  lib.rs
crates/zero-auth-identity-core/src/: types.rs
crates/zero-auth-methods/: Cargo.toml  REFACTORING.md
crates/zero-auth-methods/src/: lib.rs  mfa.rs  service.rs  traits.rs  types.rs
crates/zero-auth-server/src/: config.rs  request_context.rs
crates/zero-id-client/: Cargo.toml  README.md  REFERENCE.md
crates/zero-id-client/src/: main.rs  storage.rs  types.rs
crates/zero-id-crypto/: Cargo.toml
crates/zero-id-crypto/src/: derivation.rs  keys.rs  lib.rs  utils.rs
crates/zero-id-identity-core/: Cargo.toml
crates/zero-id-identity-core/src/: errors.rs  lib.rs  types.rs
crates/zero-id-identity-core/src/service/: ceremonies.rs  identity.rs  machine.rs  mod.rs  namespace.rs
crates/zero-id-integrations/: Cargo.toml
crates/zero-id-integrations/src/: errors.rs  lib.rs
crates/zero-id-methods/: Cargo.toml
crates/zero-id-methods/src/: challenge.rs  errors.rs  lib.rs  mfa.rs  types.rs
crates/zero-id-methods/src/oauth/: types.rs
crates/zero-id-methods/src/oauth/oidc/: jwks.rs  validation.rs
crates/zero-id-methods/src/service/: email.rs  machine.rs  mfa.rs  mod.rs  oauth.rs  oauth_helpers.rs  wallet.rs
crates/zero-id-policy/: Cargo.toml
crates/zero-id-policy/src/: engine.rs  lib.rs  types.rs
crates/zero-id-server/: Cargo.toml
crates/zero-id-server/src/: config.rs  error.rs  extractors.rs  main.rs  middleware.rs  state.rs
crates/zero-id-server/src/api/: auth.rs  auth_wallet.rs  credentials.rs  health.rs  helpers.rs  identity.rs  integrations.rs  machines.rs  mfa.rs  namespaces.rs  sessions.rs
crates/zero-id-sessions/: Cargo.toml
crates/zero-id-sessions/src/: errors.rs  types.rs
crates/zero-id-sessions/src/service/: introspection.rs  keys.rs  lifecycle.rs  mod.rs  tokens.rs
crates/zero-id-sessions/src/tests/: helpers.rs  jwt.rs  sessions.rs  types.rs
crates/zero-id-storage/: Cargo.toml
crates/zero-id-storage/src/: lib.rs
crates/zid-bin/: Cargo.toml  build.rs
crates/zid-bin/src/: app.rs  main.rs  render.rs  setup.rs
crates/zid-bin/src/components/: buttons.rs  data_display.rs  domain.rs  feedback.rs  inputs.rs  labels.rs  layout.rs  mod.rs  tokens.rs
crates/zid-bin/src/infra/: crypto_adapter.rs  http_client.rs  local_storage.rs
crates/zid-bin/src/service/: ceremonies.rs  credentials.rs  identity.rs  key_shard.rs  machine.rs  mfa.rs  session.rs
crates/zid-bin/src/state/: actions.rs  mod.rs  types.rs
crates/zid-bin/src/ui/: mod.rs
crates/zid-bin/src/ui/components/core/: mod.rs
crates/zid-bin/src/ui/components/domain/: mod.rs
crates/zid-bin/src/ui/layout/: mod.rs
crates/zid-bin/src/ui/pages/: credentials.rs  machines.rs  mfa.rs  mod.rs  namespaces.rs  sessions.rs  settings.rs
crates/zid-bin/src/ui/pages/onboarding/: create_identity.rs  login.rs  mod.rs  recover_identity.rs
crates/zid-client/: Cargo.toml  README.md  REFERENCE.md
crates/zid-client/src/: main.rs  storage.rs  types.rs
crates/zid-client/src/commands/: auth.rs  credentials.rs  identity.rs  machines.rs  mod.rs  recovery.rs  tokens.rs
crates/zid-client/src/storage/: credentials.rs  kek.rs  migration.rs  mod.rs  session.rs
crates/zid-crypto/: Cargo.toml
crates/zid-crypto/src/: constants.rs  derivation.rs  did.rs  errors.rs  hashing.rs  keys.rs  lib.rs  shamir.rs  utils.rs
crates/zid-crypto/src/derivation/: identity.rs  machine.rs  mod.rs  pq.rs  session.rs
crates/zid-crypto/src/keys/: classical.rs  machine.rs  mod.rs  neural.rs  pq.rs
crates/zid-desktop/: Cargo.toml
crates/zid-desktop/src/: error.rs  main.rs
crates/zid-identity-core/: Cargo.toml
crates/zid-identity-core/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/zid-identity-core/src/service/: ceremonies.rs  identity.rs  machine.rs  managed.rs  mod.rs  namespace.rs  namespace_tests.rs  upgrade.rs
crates/zid-integrations/: Cargo.toml
crates/zid-integrations/src/: errors.rs  lib.rs
crates/zid-methods/: Cargo.toml
crates/zid-methods/src/: challenge.rs  errors.rs  lib.rs  mfa.rs  traits.rs  types.rs  wallet.rs
crates/zid-policy/: Cargo.toml
crates/zid-policy/src/: engine.rs  errors.rs  lib.rs  rate_limit.rs  types.rs
crates/zid-server/: Cargo.toml
crates/zid-server/src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  state.rs  validation.rs
crates/zid-server/src/api/: auth.rs  auth_wallet.rs  credentials.rs  health.rs  helpers.rs  identity.rs  integrations.rs  machines.rs  mfa.rs  namespaces.rs  sessions.rs
crates/zid-server/src/api/identity_creation/: handlers.rs  helpers.rs  mod.rs  types.rs
crates/zid-sessions/: Cargo.toml
crates/zid-sessions/src/: errors.rs  types.rs
crates/zid-storage/: Cargo.toml
crates/zid-storage/src/: column_families.rs  lib.rs
docs/api/: README.md  errors.md  v1-reference.md
docs/desktop/: 01-requirements-matrix.md  02-mvp-v1-scope.md  03-ux-critical-flows.md  04-architecture-boundaries.md  05-qa-security-gates.md
docs/encryption/: comparison.md  quantum.md
docs/integration/: integration.md
docs/spec/v0.1/: 01-crypto.md  02-storage.md  03-policy.md  04-identity-core.md  05-integrations.md  06-sessions.md  07-methods.md  08-server.md  09-client.md  (+3 more)
docs/spec/v0.1.0/: 01-crypto.md  06-sessions.md  08-server.md  09-client.md  README.md
docs/spec/v0.1.1/: 00-system-overview.md  01-crypto.md  02-storage.md  03-policy.md  04-identity-core.md  05-sessions.md  06-integrations.md  07-methods.md  08-server.md  09-client.md  10-crypto-primitives.md  README.md
scripts/: README.md  dev.ps1  dev.sh  prod.ps1  prod.sh
tests/: Cargo.toml  README.md
tests/common/: server.rs
tests/integration/: identity_creation.rs  namespace_management.rs  policy_engine.rs
(+72 files in other folders)
