[package]
name = "zero-id-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
# Internal crates
zero-id-crypto = { path = "../crates/zero-id-crypto" }
zero-id-identity-core = { path = "../crates/zero-id-identity-core" }
zero-id-policy = { path = "../crates/zero-id-policy" }
zero-id-storage = { path = "../crates/zero-id-storage" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
chrono = "0.4"

[[test]]
name = "identity_creation"
path = "integration/identity_creation.rs"
harness = true

[[test]]
name = "policy_engine"
path = "integration/policy_engine.rs"
harness = true
