[package]
name = "zid-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
# Internal crates
zid-crypto = { path = "../crates/zid-crypto" }
zid-identity-core = { path = "../crates/zid-identity-core" }
zid-policy = { path = "../crates/zid-policy" }
zid-storage = { path = "../crates/zid-storage" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
chrono = "0.4"

[[test]]
name = "identity_creation"
path = "integration/identity_creation.rs"
harness = true

[[test]]
name = "policy_engine"
path = "integration/policy_engine.rs"
harness = true
