[package]
name = "zero-id-identity-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
zero-id-crypto = { path = "../zero-id-crypto" }
zero-id-storage = { path = "../zero-id-storage" }
zero-id-policy = { path = "../zero-id-policy" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "zero_id_identity_core"
path = "src/lib.rs"
