[package]
name = "zero-id-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
zero-id-crypto = { path = "../zero-id-crypto" }
zero-id-storage = { path = "../zero-id-storage" }
zero-id-policy = { path = "../zero-id-policy" }
zero-id-identity-core = { path = "../zero-id-identity-core" }
zero-id-methods = { path = "../zero-id-methods" }
zero-id-sessions = { path = "../zero-id-sessions" }
zero-id-integrations = { path = "../zero-id-integrations" }

# Web framework
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing/Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true