[package]
name = "zero-id-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
zero-id-crypto = { path = "../zero-id-crypto" }
zero-id-storage = { path = "../zero-id-storage" }
zero-id-identity-core = { path = "../zero-id-identity-core" }

# JWT
jsonwebtoken = "9"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Base64
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
zero-id-policy = { path = "../zero-id-policy" }
