[package]
name = "zid-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zid-bin"
path = "src/main.rs"

[dependencies]
# PQ-Hybrid crypto
zid = { workspace = true }
zid-crypto = { path = "../zid-crypto" }

# Embedded identity server
zid-server = { path = "../zid-server" }

# UI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui-phosphor = "0.9"

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crypto
zeroize = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Clipboard
arboard = "3"

# Open browser
open = "5"

# QR code rendering for MFA
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Password strength
zxcvbn = { workspace = true }

# Random
rand = { workspace = true }
