[package]
name = "zid-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# PQ-Hybrid crypto
zid = { workspace = true }
# zid crypto library (for client-side key generation)
zid-crypto = { path = "../zid-crypto" }
# Ed25519 for signing
ed25519-dalek = { workspace = true }
# RNG
rand = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Pretty printing
colored = "2.1"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# Password input
rpassword = "7.3"

# Argon2id for key derivation
argon2 = "0.5"

# Cryptographically secure random number generation (WASM-compatible)
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
