[package]
name = "zid-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# PQ-Hybrid crypto (external zid crate)
zid = { workspace = true }

# Cryptographic primitives (server-side only, not provided by zid)
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bitflags = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }

[lib]
name = "zid_crypto"
path = "src/lib.rs"
