[package]
name = "zid-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
zid-crypto = { path = "../zid-crypto" }
zid-storage = { path = "../zid-storage" }
zid-policy = { path = "../zid-policy" }
zid-identity-core = { path = "../zid-identity-core" }
zid-methods = { path = "../zid-methods" }
zid-sessions = { path = "../zid-sessions" }
zid-integrations = { path = "../zid-integrations" }

# Web framework
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing/Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true